--- a/style.css
+++ b/style.css
@@ -24,6 +24,16 @@ footer{
 
 }
 
+
+
+.cabecalho_menu-lista{
+
+    margin: 20px;
+
+}
+
+
+
 .cabecalho_menu-listaitem{
     display: inline;
     text-transform: uppercase;
