--- a/style.css
+++ b/style.css
@@ -32,7 +32,11 @@ footer{
 
 }
 
+.sobre{
 
+display: flex;
+justify-content: center;
+}
 
 .cabecalho_menu-listaitem{
     display: inline;
@@ -40,3 +44,8 @@ footer{
     margin-left: 10px;
 
 }
+
+.sobre_imagem{
+width: 400px;
+height: 400px;
+padding: 20px;
