--- a/style.css
+++ b/style.css
@@ -36,7 +36,10 @@ footer{
 
 display: flex;
 justify-content: center;
+align-items: center;
+
 }
+
 
 .cabecalho_menu-listaitem{
     display: inline;
